--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "babel-loader": "^8.0.4",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
-    "webpack": "^4.30.0"
+    "nodemon": "^1.19.0",
+    "webpack": "^4.30.0",
+    "webpack-cli": "^3.3.1"
   },
   "dependencies": {
     "body-parser": "^1.17.2",
@@ -22,8 +24,7 @@
     "fs": "0.0.1-security",
     "jquery": "^3.1.1",
     "mongoose": "^4.8.6",
-    "nodemon": "^1.18.9",
-    "pg": "^7.8.0",
+    "pg": "^7.10.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   },
